--- a/action.yml
+++ b/action.yml
@@ -1,12 +1,12 @@
-name: 'EKS kubectl'
+name: "EKS kubectl"
 author: Ian Belcher
 description: An action allowing you to integrate with EKS via kubectl in a Github Action, easily...
 branding:
-  color: 'white'
-  icon: 'command'
+  color: "white"
+  icon: "command"
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: "docker"
+  image: "Dockerfile"
 inputs:
   aws_access_key_id:
     description: Your AWS_ACCESS_KEY_ID
@@ -14,6 +14,9 @@ inputs:
   aws_secret_access_key:
     description: Your AWS_SECRET_ACCESS_KEY
     required: true
+  aws_session_token:
+    description: Your AWS_SESSION_TOKEN
+    required: false
   aws_region:
     description: The region of the cluster
     required: true
@@ -23,4 +26,3 @@ inputs:
   args:
     description: The arguments that you want to pass through to the kubectl command
     required: true
-  
