--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ branding:
   icon: "command"
 runs:
   using: "docker"
-  image: docker://shantkeh/eks-kubectl-action
+  image: docker://shantkeh/eks-kubectl-action:1.0
 inputs:
   cluster_name:
     description: The name of the cluster you're using
